springboot 설정 수정 (spring 2.4 버전부터 profile 설정 방법이 변경됨)

--- a/build.gradle
+++ b/build.gradle
@@ -26,3 +26,9 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+bootRun {
+    String activeProfile = System.properties['spring.profiles.active']
+    println("Profile ===> " + activeProfile)
+    systemProperty "spring.profiles.active", activeProfile
+}
